- Implement Twig template caching - Use separate footer and header template include

--- a/views/askConfirmation.twig
+++ b/views/askConfirmation.twig
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IndieCert</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
+{% include 'head.html' %}
 <body>
     <div id="container">
-    <a class="header" href="welcome"><h1>IndieCert</h1></a>
-    <p>
-<strong>{{ host|e }}</strong> wants to confirm your identity
-<strong>{{ me|e }}</strong>.
-    </p>
 
-    <form method="post" action="{{ confirmUri|e }}">
-        <label for="remember">Remember approval for 1 week</label>
-        <input type="checkbox" id="remember" name="remember" />
-        <button class="reject" type="submit" name="approval" value="reject">Reject</button>
-        <button class="approve" type="submit" name="approval" value="approve">Approve</button>
-    </form>
+        <a class="header" href="welcome"><h1>IndieCert</h1></a>
 
-    <div class="footer">
-        <a href="faq">FAQ</a> | IndieCert
-    </div>
+        <p>
+            <strong>{{ host|e }}</strong> wants to confirm your identity
+            <strong>{{ me|e }}</strong>.
+        </p>
 
-    </div>
+        <form method="post" action="{{ confirmUri|e }}">
+            <label for="remember">Remember approval for 1 week</label>
+            <input type="checkbox" id="remember" name="remember" />
+            <button class="reject" type="submit" name="approval" value="reject">Reject</button>
+            <button class="approve" type="submit" name="approval" value="approve">Approve</button>
+        </form>
+
+        {% include 'footer.html' %}
+    </div> <!-- /container -->
 </body>
 </html>
