- fix blockquotes in templates - validate that `client_id` host matches `redirect_uri` host - show `client_id` instead of `redirect_uri` host in confirmation dialog

--- a/views/askConfirmation.twig
+++ b/views/askConfirmation.twig
@@ -8,7 +8,7 @@
         <a class="header" href="welcome"><h1>IndieCert</h1></a>
 
         <p>
-            <strong>{{ host|e }}</strong> wants to confirm your identity
+            <strong title="{{ redirectUri|e }}">{{ clientId|e }}</strong> wants to verify your claimed identity
             <strong>{{ me|e }}</strong>.
         </p>
 
