increase font size for code and pre

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -16,11 +16,13 @@ h1 {
 
 code { 
     background: hsl(220, 80%, 90%); 
+    font-size: 120%;
 }
 
 pre {
     white-space: pre-wrap;
     background: hsl(30,80%,90%);
+    font-size: 120%;
 }
 
 span.sup {
