--- a/views/authenticatedPage.twig
+++ b/views/authenticatedPage.twig
@@ -7,11 +7,15 @@
         <a class="header" href="welcome"><h1>IndieCert</h1></a>
 
         <p class="info">
-            You are now successfully authenticated as <strong>{{ me|e }}</strong>!
+            You are now successfully authenticated!
+        </p>
+        
+        <p>
+            Your identity is <code>{{ me|e }}</code>.
         </p>
 
         <p>
-            Log me <a href="indieauth/logout">out</a>!
+            <a href="indieauth/logout">Logout</a>
         </p>
 
         {% include 'footer.html' %}
