update browser support stuff on enrollpage

--- a/views/enrollPage.twig
+++ b/views/enrollPage.twig
@@ -12,9 +12,9 @@
             The following browsers and platforms were tested and are working:
         </p>
         <ul>
-            <li>Firefox (Linux, Android)</li>
+            <li>Firefox (Windows, Linux, Android)</li>
             <li>Chromium (Linux)</li>
-            <li>Chrome (Android)</li>
+            <li>Chrome (Windows, Android)</li>
         </ul>
         <p>
             Press the "Generate" button below to start the certificate generation process.
