--- a/views/askConfirmation.twig
+++ b/views/askConfirmation.twig
@@ -17,10 +17,9 @@
         </table>
 
         <form method="post" action="{{ confirmUri|e }}">
-            <label for="remember">Remember approval for 1 week</label>
             <input type="checkbox" id="remember" name="remember" />
-            <button class="reject" type="submit" name="approval" value="reject">Reject</button>
-            <button class="approve" type="submit" name="approval" value="approve">Approve</button>
+            <label for="remember">Remember for 1 week</label>
+            <button class="approve" type="submit">Approve</button>
         </form>
 
         {% include 'footer.html' %}
